--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-  <link rel="stylesheet" href="style.css">
+  <style>
+  body {
+    background-color: #23272A;
+    }
+  </style>
   <h1 style="text-align:center;">Official SharkNix Website</h1>
   <p style="text-align+:center;">Coming Soon...</h1>
