--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <style>
   body {
     background-color: #23272A;
+    color: white;
     }
   </style>
   <h1 style="text-align:center;">Official SharkNix Website</h1>
-  <p style="text-align+:center;">Coming Soon...</h1>
+  <p style="text-align:center;">Coming Soon...</h1>
