--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
   section1 {
     background-color: #7289da;
+ 
     }
   </style>
   <br>
@@ -15,4 +16,4 @@
   <h1 style="text-align:center;">Official SharkNix Website</h1>
   <p style="text-align:center;">Coming Soon...</h1>
   <br>
-  </section>
+  </section1>
