--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 <html>
-  <style>
-  body {
-    background-color: #23272A;
-    color: white;
-    }
-    
-  section1 {
-    background-color: #7289da;
- 
-    }
-  </style>
-  <br>
-  <section1>
-    <br>
-  <h1 style="text-align:center;">Official SharkNix Website</h1>
-  <p style="text-align:center;">Coming Soon...</h1>
-  <br>
-  </section1>
+  <body>
+    <script>
+      window.location.assign('//fireyjs.repl.co')
+    </script>
+  </body>
+</html>
