--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 		]
 }</script>
     <meta name="theme-color" content="#28cad9">
-    <meta name="twitter:site" content="@">
+    <meta name="twitter:site" content="@fireyjs">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Home">
-    <meta name="twitter:description" content="">
-    <meta property="og:title" content="Home">
+    <meta name="twitter:title" content="FireyJS">
+    <meta name="twitter:description" content="Hi! This is my portfolio :)">
+    <meta property="og:title" content="FireyJS">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-6c30"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -44,7 +44,7 @@
     <section class="u-align-center u-clearfix u-image u-section-1" id="carousel_9785" data-image-width="1980" data-image-height="1320">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div alt="" class="u-border-17 u-border-palette-1-base u-image u-image-circle u-image-1" data-image-width="256" data-image-height="256"></div>
-        <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">Welcome to my&nbsp;<span style="font-weight: 700;"> portfolio</span>
+        <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">Welcome to my<span style="font-weight: 700;"> portfolio</span>
         </h2>
         <p class="u-text u-text-body-alt-color u-text-2">I am Tristan, a developer born in Toronto, Ontario. I develop HTML websites, along with Discord bots, and somtimes <a href="https://en.wikipedia.org/wiki/Batch_file" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">Batch programs</a> too.<br>
         </p>
@@ -56,10 +56,7 @@
         <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Kali was a movie streaming service made to bring movies to people without subscriptions.<span style="font-weight: 700;">
             <span style="font-size: 1.5rem;"><i>
                 <span style="font-style: normal;">I</span>
-                <span style="font-style: normal;">
-                  <span style="font-style: italic;"></span>
-                </span>
-                <span style="font-style: normal;">t was deleted because I didnt want to get into legal troubles</span></i>&nbsp;
+ <span style="font-style: normal;">t was deleted because I didnt want to get into legal troubles</span></i>&nbsp;
             </span>
           </span>
           <br>
